--- a/chrome/browser/resources/options/browser_options.html
+++ b/chrome/browser/resources/options/browser_options.html
@@ -115,4 +115,18 @@
     </div>
   </section>
 </if>
+<if expr="not pp_ifdef('chromeos') and (os == 'darwin')">
+  <section>
+    <h3 i18n-content="checkForUpdateGroupName"></h3>
+    <div>
+      <div class="checkbox">
+        <label>
+          <input type="checkbox" id="autoCheckCheckbox"
+              pref="automatic_updates.enabled">
+          <span i18n-content="updatesAutoCheckDaily"></span>
+        </label>
+      </div>
+    </div>
+  </section>  
+</if>
 </div>
