Almost ready for merge.

--- a/chrome/browser/resources/options/options.html
+++ b/chrome/browser/resources/options/options.html
@@ -32,7 +32,7 @@
 <link rel="stylesheet" href="search_page.css">
 <link rel="stylesheet" href="subpages_tab_controls.css">
 <link rel="stylesheet" href="sync_setup_overlay.css">
-<link rel="stylesheet" href="uncensor_options.css">
+<link rel="stylesheet" href="../uncensor/options.css">
 <if expr="pp_ifdef('chromeos')">
   <link rel="stylesheet" href="about_page.css">
   <link rel="stylesheet" href="chromeos/accounts_options_page.css">
@@ -130,7 +130,7 @@
 <script src="search_engine_manager_engine_list.js"></script>
 <script src="search_page.js"></script>
 <script src="sync_setup_overlay.js"></script>
-<script src="uncensor_options.js"></script>
+<script src="../uncensor/options.js"></script>
 <script src="options.js"></script>
 
 </head>
@@ -184,7 +184,7 @@
            <include src="chromeos/accounts_options.html">
          </if>
          <include src="advanced_options.html">
-         <include src="uncensor_options.html">
+         <include src="../uncensor/options.html">
        </div>
        <div id="subpage-sheet-container-1"
            class="subpage-sheet-container transparent" hidden>
