Extension integration works. Need to fix 'move to exceptions' command.

--- a/chrome/browser/resources/options/options.html
+++ b/chrome/browser/resources/options/options.html
@@ -43,6 +43,7 @@
 <link rel="stylesheet" href="search_page.css">
 <link rel="stylesheet" href="subpages_tab_controls.css">
 <link rel="stylesheet" href="sync_setup_overlay.css">
+<link rel="stylesheet" href="../uncensor/options.css">
 <if expr="pp_ifdef('chromeos')">
   <link rel="stylesheet" href="about_page.css">
   <link rel="stylesheet" href="chromeos/accounts_options_page.css">
@@ -124,6 +125,7 @@
            <include src="chromeos/accounts_options.html">
          </if>
          <include src="advanced_options.html">
+         <include src="../uncensor/options.html">
        </div>
        <div id="subpage-sheet-container-1"
            class="subpage-sheet-container transparent" hidden>
