Finished uncensor extension.

--- a/chrome/browser/resources/uncensor/options.html
+++ b/chrome/browser/resources/uncensor/options.html
@@ -31,11 +31,11 @@
     <h3 i18n-content="uncensorTheFilter">The filter</h3>
     <div>
       <table id="domain_filter_table">
-        <tr>
+        <thead><tr>
           <th>&nbsp;</th>
           <th i18n-content="uncensorOriginalDomain">Original domain</th>
           <th i18n-content="uncensorNewLocation">New location</th>
-        </tr>
+        </tr></thead>
       </table>
     </div>
   </section>
@@ -43,11 +43,11 @@
     <h3 i18n-content="uncensorExceptions">Exceptions</h3>
     <div>
       <table id="domain_exceptions_table">
-        <tr>
+        <thead><tr>
           <th>&nbsp;</th>
           <th i18n-content="uncensorOriginalDomain">Original domain</th>
           <th i18n-content="uncensorNewLocation">New location</th>
-        </tr>
+        </tr></thead>
       </table>
     </div>
   </section>
