--- a/chrome/browser/resources/uncensor/background.html
+++ b/chrome/browser/resources/uncensor/background.html
@@ -119,7 +119,7 @@ Copyright (c) 2011 Crystalnix <vgachkaylo@crystalnix.com>
       
     var uri = parseUri(tab.url);
     for (var domain in prefs.domainFilter) {
-      if (uri["host"].endsWith(domain)) {
+      if (!(domain in prefs.domainExceptions) && uri["host"].endsWith(domain)) {
         // in the next line, it will replace only first occurence of host string
         var newUri = tab.url.replace(domain, prefs.domainFilter[domain]);
                     
