Sidebar extension changes (win).
- Fixed authentication bug in background.html
- Moved sidebar urls to url_constants.h
- Added drawing of sidebar border on win
- Sidebar contents html ui file renamed

--- a/chrome/browser/resources/facebook_friends/friends_sidebar.html
+++ b/chrome/browser/resources/facebook_friends/friends_sidebar.html
@@ -78,6 +78,13 @@
         var ul = document.createElement('ul');
         ul.innerHTML = listHtml;
         document.body.appendChild(ul);
+
+        var blocks = document.getElementsByClassName('leftSide');
+        for (var i = 0; i < blocks.length; ++i) {
+        blocks[i].onclick = function () {
+            window.location.hash = "doSomethingAmazinglyStupid";
+          };
+        }
       });
     // ]]></script>
   </body>
