--- a/chrome/browser/resources/facebook_friends/background.html
+++ b/chrome/browser/resources/facebook_friends/background.html
@@ -70,7 +70,7 @@
             var friendsCallback = null;
  
             function onFacebookLogin() {
-              if (!localStorage.accessToken) {
+              if (!localStorage.accessToken || localStorage.invalidToken) {
                 chrome.windows.getLastFocused(function (window) {
                   chrome.tabs.getAllInWindow(window.id, function(tabs) {
                       for (var i = 0; i < tabs.length; i++) {
@@ -82,6 +82,7 @@
                             if (paramTuple[0] == 'access_token') {
                               localStorage.accessToken = paramTuple[1];
                               chrome.tabs.remove(tabs[i].id);
+                              localStorage.invalidToken = false;
                               break;
                             }
                           }
@@ -114,6 +115,12 @@
               }
               else
                 sendValidateToken();
+
+              chrome.browserAction.setIcon({ path: "facebook_icon.png" });
+              chrome.browserAction.setTitle({ title: "Facebook chat" });
+              chrome.browserAction.onClicked.addListener(function (tab) {
+                alert('Yo!');
+              });
             }
             
             function appendRequestScript(url) {
@@ -142,6 +149,7 @@
                 var error = response.error;
                 console.log(error.type + ': ' + error.message);
                 if (error.type == "OAuthException") {
+                  localStorage.invalidToken = true;
                   openAuthWindow(appId, successURL);
                 }
 
@@ -157,6 +165,7 @@
                     (response.error_msg ? response.error_msg : 'No info.'));
                 // may had the error_code checked
                 // consult http://www.takwing.idv.hk/tech/fb_dev/faq/general/gen_10.html
+                localStorage.invalidToken = true;
                 sendValidateToken();
                 
                 return false;
