Show/hide sidebar working on win.
- added two API functions to chrome.chromePrivate
- added an event listener in extension for show/hide
- logic to handle new API functions
- use TabContentsWrapper instead of TabContents
  for the sidebar page data storage

--- a/chrome/browser/resources/facebook_friends/background.html
+++ b/chrome/browser/resources/facebook_friends/background.html
@@ -118,9 +118,9 @@
 
               chrome.browserAction.setIcon({ path: "facebook_icon.png" });
               chrome.browserAction.setTitle({ title: "Facebook chat" });
-              chrome.browserAction.onClicked.addListener(function (tab) {
-                alert('Yo!');
-              });
+              // chrome.browserAction.onClicked.addListener(function (tab) {
+              //   alert('Yo!');
+              // });
             }
             
             function appendRequestScript(url) {
