--- a/chrome/browser/resources/options/advanced_options.html
+++ b/chrome/browser/resources/options/advanced_options.html
@@ -55,7 +55,7 @@
         </label>
       </div>
 </if>
-<if expr="pp_ifdef('_google_chrome') and not pp_ifdef('chromeos')">
+<if expr="not pp_ifdef('chromeos')">
       <div id="metricsReportingSetting" class="checkbox">
         <label>
           <input id="metricsReportingEnabled" type="checkbox">
