--- a/chrome/browser/resources/facebook_friends/chat.html
+++ b/chrome/browser/resources/facebook_friends/chat.html
@@ -23,6 +23,7 @@
     #msg {
       border: 1px solid #ccc;
       width: 100%;
+      outline: none;
     }
     #chat {
       list-style: none;
@@ -59,6 +60,7 @@
 
   </style>
   <script src='js/jquery.min.js'></script>
+  <script src="js/autolink-min.js"></script>
   <script src="js/common.js"></script>
   <script type="text/javascript">
   //<![CDATA[
