Fixed bug with reverse notification display (mac)

--- a/chrome/browser/resources/facebook_friends/background.html
+++ b/chrome/browser/resources/facebook_friends/background.html
@@ -75,13 +75,14 @@
                            connection.disconnect();
                        }
                    );
-                  
+
                   break;
                 }
               }
             }
             else {
               localStorage.clear();
+              friendsCached = null;
               connection.disconnect();
               chrome.extension.sendRequest({ requestType: 'loggedOut' });
             }
