Facebook chat improved functionality (mac)
Version 0.3.8.1
- changed status icons
- added icons to chatbar buttons
- moved to external facebook extension (crx):
  chrome/browser/resources/facebook_friends/* are no longer up-to-date
- added instant status updates
- 'logged out' event processing: removing all chatbar buttons
- fixed toolbar overlayed in fullscreen bug
- set facebook extension button to pushed state when sidebar is opened
- fixed position of close popup button on notification windows

--- a/chrome/browser/resources/facebook_friends/background.html
+++ b/chrome/browser/resources/facebook_friends/background.html
@@ -84,6 +84,7 @@
               localStorage.clear();
               friendsCached = null;
               connection.disconnect();
+              chrome.chromePrivate.loggedOutFacebookSession();
               chrome.extension.sendRequest({ requestType: 'loggedOut' });
             }
 
