Bugfix and search added
- search friends in a sidebar
- changed default graph endpoint to /me/inbox
  for messages extension
- bugfix with uncensor manifest resource 
  not declared
- hover state removal bugfix on browser action
  button for friends extension
- initial setup of 'pushed' button state for 
  friends extension browser action
- hack fix of floating popup chat windows
- extension packages added to build configuration

--- a/bitpop_specific/extensions/facebook_messages/popup.html
+++ b/bitpop_specific/extensions/facebook_messages/popup.html
@@ -234,7 +234,7 @@
     chrome.extension.sendRequest(current.controllerExtensionId,
         {
           type: 'graphApiCall',
-          path: '/me/inbox/',
+          path: '/me/inbox',
           params: { fields: 'id,from,to,updated_time,unread,unseen,comments,message',
                     limit: NUM_MESSAGES_SHOW }
         },
