--- a/bitpop_specific/extensions/facebook_friends/friends_sidebar.html
+++ b/bitpop_specific/extensions/facebook_friends/friends_sidebar.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 <head>
   <title>Facebook Chat Sidebar</title>
@@ -33,6 +34,10 @@
         <p id="unavail" style="display:none">Service unavailable</p>
         <p id="logout"><a href="#">Logout</a></p>
         <div class="clr"></div>
+
+        <div id="search-wrap">
+          <input id="search" type="search" placeholder="Search..." name="s" />
+        </div>
 
         <div class="box-wrap antiscroll-wrap">
           <div class="box">
