Bugfix permissions, first launch, css
- added read_mailbox permission to the list of
  requested permissions
- fixed the bug which prevented friends extension
  from normal functioning during first launch
- changed css styles for search in friends
- css styles for friends avatar pics

--- a/bitpop_specific/extensions/facebook_friends/background.html
+++ b/bitpop_specific/extensions/facebook_friends/background.html
@@ -13,11 +13,16 @@
     //    extensionId: chrome.i18n.getMessage('@@extension_id')
     //  });
 
-    chrome.browserAction.onClicked.addListener(function (tab) {
-      chrome.chromePrivate.getFriendsSidebarVisible(function(is_visible) {
-        chrome.chromePrivate.setFriendsSidebarVisible(!is_visible);
-      });
-    });
+    (function () {
+      if (chrome.browserAction)
+        chrome.browserAction.onClicked.addListener(function (tab) {
+          chrome.chromePrivate.getFriendsSidebarVisible(function(is_visible) {
+            chrome.chromePrivate.setFriendsSidebarVisible(!is_visible);
+          });
+        });
+      else
+        setTimeout(arguments.callee, 1000);
+    })();
 
     chrome.extension.onRequestExternal.addListener(function (request, sender, sendResponse) {
       if (!request.type)
