Online presence === null bugfix

--- a/bitpop_specific/extensions/facebook_friends/background.html
+++ b/bitpop_specific/extensions/facebook_friends/background.html
@@ -64,7 +64,9 @@
               chrome.chromePrivate.newIncomingMessage(
                                  friendList[i].uid.toString(),
                                  friendList[i].name,
-                                 friendList[i].online_presence,
+                                 (friendList[i].online_presence !== null) ?
+                                     friendList[i].online_presence :
+                                     'offline',
                                  request.body);
               break;
             }
